Update BuildWebHost method in Program class to use basic WebHost configuration

--- a/ConfiguringAspNetCoreApps/ConfiguringAspNetCoreApps.csproj
+++ b/ConfiguringAspNetCoreApps/ConfiguringAspNetCoreApps.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <UserSecretsId>375caacb-ee4f-406b-823b-cda9f69b8a8e</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.1" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.9" />
   </ItemGroup>
 
 </Project>
