Enable logging in the application and create custom logging in Index action at HomeController

--- a/ConfiguringAspNetCoreApps/appsettings.json
+++ b/ConfiguringAspNetCoreApps/appsettings.json
@@ -1,5 +1,10 @@
 ﻿{
   "ShortCircuitMiddleware": {
-    "EnableBrowserShortCircuit" :  true
+    "EnableBrowserShortCircuit": true
+  },
+  "Logging": {
+    "Default": "Debug",
+    "Microsoft": "Information",
+    "System": "Information"
   }
 }
